--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "scripts": {
         "build": "webpack --progress",
         "start": "webpack serve --config webpack.config.js",
-        "lint": "eslint ./src --ext .js,.jsx"
+        "lint": "eslint ./src --ext .js"
     },
     "keywords": [],
     "author": "",
